fix: изменить параметры конструктора